install( FILES companylist
               aiptek_devicelist
               default_devicelist
               huion_devicelist
               lenovo_devicelist
               ntrig_devicelist
               toshiba_devicelist
               wacom_devicelist
               waltop_devicelist
               DESTINATION  ${DATA_INSTALL_DIR}/wacomtablet/data )
