add_executable(Test.Common.DeviceProfileConfigAdaptor testdeviceprofileconfigadaptor.cpp ../commontestutils.cpp)
add_test(NAME Test.Common.DeviceProfileConfigAdaptor COMMAND Test.Common.DeviceProfileConfigAdaptor)
ecm_mark_as_test(Test.Common.DeviceProfileConfigAdaptor)
target_link_libraries(Test.Common.DeviceProfileConfigAdaptor ${WACOM_COMMON_TEST_LIBS})
